Remove unnecessary gradle settings